--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="min-height:100vh;">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
@@ -11,3 +11,10 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
+<style>
+   body {
+      margin: 0;
+      padding: 0;
+    }
+</style>
